--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Tomorrow&family=Rufina&display=swap"
       rel="stylesheet"
     />
+    <!--
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    -->
+    <link rel="icon" href="logo.png">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="An elegant typing test website." />
@@ -28,10 +32,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ele Types</title>
+    <title>TurtleTypes</title>
   </head>
   <body>
-    <noscript>An elegant typing speed test tool.</noscript>
+    <noscript>An minimalistic typing speed test tool.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
