--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="An elegant typing test website." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -35,7 +40,7 @@
     <title>TurtleTypes</title>
   </head>
   <body>
-    <noscript>An minimalistic typing speed test tool.</noscript>
+    <noscript>A minimalistic typing speed test tool.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
